# Bocce

./: .gitignore  Bocci.sln  Bocci.vcxproj  Bocci.vcxproj.filters  CMakeLists.txt  CMakePresets.json  LICENSE.txt  NOTES.md  README.md  client_config.toml  config.toml  debug.h  dual_config.toml  main.c
cmake/: raylib.cmake
config/: client_config.toml  server_config.toml.disabled
inc/: ball.h  banned.h  bmath.h  chat.h  clay.h  clay_renderer_raylib.h  cli.h  colors.h  config.h  constants.h  data_structures.h  database.h  debug.h  drawing.h  error_codes.h  file_system.h  graphics.h  init.h  networking.h  physac.h  physics.h  raygui.h  resources.h  scene.h  serialize.h  timer.h  types.h  ui.h  update.h
lib/physac/: physac_real.h
protocols/: chat.proto
prototypes/: client.py  common.py  server.py
res/fonts/RasterForge-Font-1-1/: RasterForge.fnt
res/fonts/raster_forge/: RasterForge2.fnt  RasterForge_0.tga
res/images/main_menu/: Draft1.xcf
src/: CMakeLists.txt  chat.c  clay_renderer_raylib.c  config.c  debug.c  drawing.c  file_system.c  init.c  main.c  networking.c  scene.c  serialize.c  timer.c  types.c  ui.c  update.c
